<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        app:key="password"
        app:title="@string/password"
        android:inputType="textPassword"
        app:negativeButtonText="@string/cancel" />

    <EditTextPreference
        app:key="phone"
        app:title="@string/phone"
        app:negativeButtonText="@string/cancel"
        app:persistent="true"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="nincs megadva"/>

    <EditTextPreference
        app:key="limit"
        app:title="@string/limit"
        android:inputType="number"
        app:negativeButtonText="@string/cancel"
        app:persistent="true"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="3"/>

    <MultiSelectListPreference
        app:key="apps"
        app:title="@string/apps"
        app:negativeButtonText="@string/cancel"
        app:persistent="true"
        />



</PreferenceScreen>
